[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/TitleTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Title/Title.gd" type="Script" id=2]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Buttons"]
margin_right = 139.0
margin_bottom = 34.0
size_flags_horizontal = 0
text = "New Game"
flat = true

[node name="LoadFile" type="Button" parent="Buttons"]
margin_top = 38.0
margin_right = 117.0
margin_bottom = 72.0
size_flags_horizontal = 0
text = "Load File"
flat = true

[node name="Options" type="Button" parent="Buttons"]
margin_top = 76.0
margin_right = 105.0
margin_bottom = 110.0
size_flags_horizontal = 0
text = "Options"
flat = true

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 114.0
margin_right = 63.0
margin_bottom = 148.0
size_flags_horizontal = 0
text = "Quit"
flat = true

[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Buttons/LoadFile" to="." method="_on_LoadFile_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
